<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@drawable/bg_gradients"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivTeamDesc"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:padding="@dimen/padding_5dp"
                tools:src="@drawable/img_barca" />

            <TextView
                android:id="@+id/tvTeamNameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivTeamDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/barcelona_team"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title_name"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:gravity="center"
                android:id="@+id/tvPlaceNameDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTeamNameDesc"
                android:layout_centerHorizontal="true"
                android:text="@string/messi"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:gravity="center"
                android:id="@+id/tvManagerNameDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPlaceNameDesc"
                android:layout_centerHorizontal="true"
                android:text="@string/messi"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvManagerNameDesc"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/colorAccent"
                    android:text="@string/text_view_desc"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_title_name" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_margin="@dimen/margin_5dp"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    android:background="@color/colorShadow" />

                <TextView
                    android:id="@+id/tvTeamDesc"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:layout_marginTop="@dimen/padding_5dp"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    android:text="@string/text_view_desc"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>